[package]
name = "cohost-dl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-recursion = "1.1"
async-scoped = { version = "0.9", features = ["use-tokio"] }
axum = { version = "0.7", features = ["macros"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
cssparser = "0.34"
deno_core = "0.311"
diesel = { version = "2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2"
env_logger = "0.11"
hex = "0.4"
html5ever = "0.26"
indicatif = "0.17"
kuchikiki = "0.8"
log = "0.4"
pulldown-cmark = "0.12"
reqwest = "0.12"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.1"
tera = "1.20"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
toml = "0.8"
urlencoding = "2.1"

[target.'cfg(windows)'.dependencies]
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
